Adding advanced stable version